[Polyam] Fix pinned carousel scroll on mobile
Port 9860046b04a03a40942f5f4bf2ed3f54ea377ccb to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/featured_carousel.scss
+++ b/app/javascript/flavours/polyam/styles/components/featured_carousel.scss
@@ -5,7 +5,7 @@
   overflow: hidden;
   flex-shrink: 0;
   border-bottom: 1px solid var(--background-border-color);
-  touch-action: pan-x;
+  touch-action: pan-y;
 
   &__slides {
     display: flex;
